# prettypy

./: .gitignore  README.md  demo.py  packageing.md  setup.cfg  setup.py  structure.md  test.py
.github/workflows/: python-test.yml
prettypy/: __init__.py  color.py  composer.py  hello.py  layout.py  pretty.py  pretty_template.py  print.py  style.py  styles.py
prettypy/tests/: test_style.py
unittests/: test_composer.py  test_layout.py  test_pretty.py  test_style.py
