[metadata]
name = prettypy
version = 0.1.1
author = zerodata
author_email = zerodata@amissum.de
description = A Python library to create pretty terminal output
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uss-zerodata/prettypy
project_urls =
    Docs = https://github.com/uss-zerodata/prettypy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True